# pixmap-ops

./: .gitignore  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CGHomework1.sln  CMakeCache.txt  CMakeLists.txt  README.md  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
sandbox/: CMakeLists.txt  cmake_install.cmake  image_math.cpp  sandbox.vcxproj  sandbox.vcxproj.filters
sandbox/res/: background-test.ppm  building(1).ppm  building(ourline+edge_detect).ppm  building(sharpen).ppm  earth-200-300.ppm  earth-blend-0.5.ppm  earth-flip.ppm  earth-gamma-0.6.ppm  earth-gamma-2.2.ppm  earth-grayscale.ppm  earth-subimage.ppm  earth.ppm  earthedge.ppm  feep-test-newcolor.ppm  feep-test-save.ppm  recordplayer.ppm  sunflower(1).ppm
sandbox/src/: Log.cpp  Log.h  image_math.h  main.cpp  pixmap_art.cpp  pixmap_test.cpp  ppm_image.cpp  ppm_image.h  test.cpp  test.h
sandbox/src/common/: Log.h  image_math.cpp  ppm_image.h
